# sim-to-recon

./: .gitignore  .modalignore  DECISIONS.md  LICENSE  Makefile  README.md  environment.yml  modal_app.py  pyproject.toml
.github/workflows/: ci.yml
configs/scenes/: dtu_scan9.yaml
configs/stress/: view_count.yaml
cpp/calib/: CMakeLists.txt
cpp/calib/include/: calib.hpp
cpp/calib/src/: calib.cpp  main.cpp
cpp/calib/tests/: CMakeLists.txt  test_calib.cpp
docs/: V1.5.md  V1.md  methodology.md  roadmap.md
docs/plans/: 2026-04-10-sim-to-recon-design.md  2026-04-10-v1-remaining-tasks.md
experiments/: generate_figures.py  run_baseline.py  run_gsplat.py  run_gsplat_multiseed.py  run_p2_diagnostic.py  run_stress_view_count.py
scripts/: generate_synthetic_scene.py  test_modal_debug_depth.py  test_modal_debug_depth2.py  test_modal_minimal_recon.py  test_modal_pycolmap.py  test_modal_recon.py  test_modal_sfm_fallback.py  test_workspace_and_undistort.py  test_zip_extraction.py
src/simtorecon/: __init__.py
src/simtorecon/data/: __init__.py  adapters.py  dtu.py
src/simtorecon/evaluation/: __init__.py  alignment.py  failure.py  metrics.py  perceptual.py
src/simtorecon/neural/: __init__.py  gsplat_trainer.py  modal_runner.py  novel_view.py
src/simtorecon/pipeline/: __init__.py  colmap_runner.py  schemas.py
src/simtorecon/stress/: __init__.py  view_sweep.py
tests/: conftest.py  test_colmap_runner.py  test_dtu_loader.py  test_metrics.py  test_perceptual.py  test_pipeline_smoke.py  test_schemas.py  test_view_sweep.py
