[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simtorecon"
version = "0.1.0"
description = "Multi-view 3D reconstruction benchmark with stress-tested honest evaluation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "open3d>=0.17.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
pipeline = [
    "pycolmap>=0.6.1",
    "opencv-python>=4.8",
]
# Local-side dependencies for V1.5 neural extension (gsplat, perceptual metrics).
# gsplat itself is NOT in this list — it runs only on Modal GPU via modal_app.py.
neural = [
    "torch>=2.0",
    "scikit-image>=0.22",
    "lpips>=0.1.4",
]
dev = [
    "simtorecon[pipeline]",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4.0",
    # scikit-image is needed by tests/test_perceptual.py's SSIM tests.
    # The SSIM function in src/simtorecon/evaluation/perceptual.py imports
    # skimage lazily, so the runtime dep is optional — but CI runs the SSIM
    # tests, and the module docstring explicitly commits to "PSNR/SSIM
    # portions should pass in CI environments without torch." Including
    # skimage here honors that commitment. Full neural extras (torch + lpips)
    # remain in [neural] and are not installed in CI — LPIPS tests skip
    # gracefully via importlib.util.find_spec guards.
    "scikit-image>=0.22",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
# N803/N806: allow uppercase variable names for math notation (K, R, P).
# N815: allow mixedCase attribute names like lr_shN (shN is the gsplat name for
# high-order spherical-harmonic coefficients).
ignore = ["N803", "N806", "N815"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "smoke: smoke tests that run a small reconstruction",
]
